fix : add not found status response in delete board api